tests/functional/lang/parse-fail-eol-2.err.exp
error: undefined variable 'invalid'
       at «stdin»:2:1:
            1| # foo
            2| invalid
             | ^
            3| # bar
